Added col_or_span argument back into the shift function as the calculation wasn't working.

--- a/web/css/styl/jeet/framework.styl
+++ b/web/css/styl/jeet/framework.styl
@@ -91,13 +91,16 @@ span(ratio = 1/2, offset = 0)
     margin-{side} (margin_l)%
     margin-{opposite-position(side)} (margin_r)%
 
-shift(ratios = 0, g = gutter)
+shift(ratios = 0, g = gutter, col_or_span = col)
     // Get direction information
     side = getLayoutDirection()
     if side == right
         ratios = replace-nth(ratios, 0, ratios[0] * -1)
-    widths = getColumn(ratios, g)
-    translate = widths[0] + widths[1] * 2
+    if col_or_span == colomn or col_or_span == col or col_or_span == c
+        widths = getColumn(ratios, g)
+        translate = widths[0] + widths[1] * 2
+    else
+        translate = getSpan(ratios)
     // Shift
     position relative
     left (translate)%
