--- a/web/css/styl/jeet/framework.styl
+++ b/web/css/styl/jeet/framework.styl
@@ -18,61 +18,50 @@
  *  pxfix()
  */
 
-gutter = 1
+
+gutter = 2
 parent_first = false
 layout_direction = LTR
 
 center(max_width = 1410px)
-    cf()
+    @extends $clearfix
+    @extends $centerbase
     max-width max_width
-    float none
-    display block
-    margin-right auto
-    margin-left auto
-    *margin-right auto
-    *margin-left auto
 
-column(ratios = 1/2, offset = 0, g = gutter, cycle = 0, uncycle = 0)
+container(ratios = null, g = gutter)
+    @extends $containerbase
+    side = getLayoutDirection()
+    if ratios != null
+        margin = getGutter(ratios, g)
+    else
+        margin = g
+    margin-{side} (-(margin))%
+    &:before
+        {side} (margin)%
+
+column(ratios = 1, offset = 0, g = gutter)
     // Gather Information
-    side = margin_side = getLayoutDirection()
+    side = getLayoutDirection()
     widths = getColumn(ratios, g)
-    margin_l = margin_r = widths[1]
-    margin_l_n = margin_r_n = 0
+    width = widths[0]
+    margin = widths[1]
     // Calculate Offset
     unless offset == 0
-        edge = offset[1]
-        edge is true ? gutter_mult = 2 : gutter_mult = 3
-        offset = offset[0]
         if offset < 0
             offset *= -1
-            offset = getColumn(offset, widths[1], nested)[0]
-            margin_r = margin_r_n = offset + widths[1] * gutter_mult
+            offset = getColumn(offset, margin)[0]
+            margin_opp = offset + margin
+            margin-{opposite-position(side)} (margin_opp)%
         else
-            offset = getColumn(offset, widths[1], nested)[0]
-            margin_l = margin_l_n = offset + widths[1] * gutter_mult
+            offset = getColumn(offset, margin)[0]
+            margin = offset + margin * 2
     // Mixin
-    cf()
+    @extends $clearfix
     float side
-    width (widths[0])%
-    margin-{margin_side} (margin_l)%
-    margin-{opposite-position(margin_side)} (margin_r)%
-    if uncycle != 0
-        &:nth-child({uncycle}n + 1)
-            margin-{margin_side} (margin_l)%
-        &:nth-child({uncycle}n)
-            margin-{opposite-position(margin_side)} (margin_r)%
-    if cycle != 0
-        &:nth-child({cycle}n + 1)
-            margin-{margin_side} (margin_l_n)%
-        &:nth-child({cycle}n)
-            margin-{opposite-position(margin_side)} (margin_r_n)%
-    else
-        &:first-child
-            margin-{margin_side} (margin_l_n)%
-        &:last-child
-            margin-{opposite-position(margin_side)} (margin_r_n)%
+    width (width)%
+    margin-{side} (margin)%
 
-span(ratio = 1/2, offset = 0)
+span(ratio = 1, offset = 0)
     // Gather Information
     side = getLayoutDirection()
     width = getSpan(ratio)
@@ -85,7 +74,7 @@ span(ratio = 1/2, offset = 0)
         else
             margin_l = getSpan(offset)
     // Mixin
-    cf()
+    @extends $clearfix
     float side
     width (width)%
     margin-{side} (margin_l)%
@@ -98,7 +87,7 @@ shift(ratios = 0, g = gutter, type = col)
         ratios = replace-nth(ratios, 0, ratios[0] * -1)
     if type == column or type == col or type == c
         widths = getColumn(ratios, g)
-        translate = widths[0] + widths[1] * 2
+        translate = widths[0] + widths[1]
     else
         translate = getSpan(ratios)
     // Shift
@@ -109,18 +98,36 @@ unshift()
     position static
     left 0
 
-getSpan(ratio = 1/2)
-    // Returns the width of a span
-    return ratio * 100
+cycle(columns = 1)
+    side = getLayoutDirection()
+    &:nth-child({columns}n)
+        float opposite-position(side)
 
-getColumn(ratios = 1/2, g = gutter)
+uncycle(columns = 1)
+    side = getLayoutDirection()
+    &:nth-child({columns}n)
+        float side
+
+getColumn(ratios = 1, g = gutter)
     // Returns the width and gutter for a column
     ratios = reverse(ratios) unless parent_first is true
     w = 100
     for ratio in ratios
         g = g / w * 100
-        w = 100 * ratio - 2 * g + 2 * ratio * g
+        w = 100 * ratio - g
     return w g
+
+getGutter(ratios = 1, g = gutter)
+    // Returns the gutter for a container
+    ratios = reverse(ratios) unless parent_first is true
+    for ratio in ratios
+        w = 100 * ratio - g
+        g = g / w * 100
+    return g
+
+getSpan(ratio = 1)
+    // Returns the width of a span
+    return ratio * 100
 
 getLayoutDirection()
     layout_direction == RTL ? result = right : result = left
@@ -135,16 +142,11 @@ endbp()
     unquote("}")
 
 stack(align = center)
-    margin_side = getLayoutDirection()
     display block
     width 100%
     margin-left auto
     margin-right auto
     margin-bottom (g * 3)%
-    &:first-child
-        margin-{margin_side} auto
-    &:last-child
-        margin-{opposite-position(margin_side)} auto
     if (align == center) or (align == c)
         text-align center
     if (align == l) or (align == l)
@@ -194,6 +196,31 @@ col = column
 off = offset
 cf = clearfix
 
+// Placeholder selectors
+$clearfix
+    cf()
+
+$centerbase
+    float none
+    display block
+    margin-right auto
+    margin-left auto
+    *margin-right auto
+    *margin-left auto
+
+$containerbase
+    display block
+    overflow hidden
+    position relative
+    &:before
+        content: ''
+        width: 100%
+        height: 100%
+        position: absolute
+        top: 0
+        z-index: -1
+
+
 // Config junk
 *
     box-sizing(border-box)
@@ -202,7 +229,7 @@ html
     overflow-y scroll
     overflow-x hidden
 body
-    cf()
+    @extends $clearfix
     width 100%
 img, video, audio, embed, object, input, iframe
     max-width 100%
