--- a/web/css/styl/jeet/framework.styl
+++ b/web/css/styl/jeet/framework.styl
@@ -1,142 +1,98 @@
-@import 'nib'
+@import 'axis'
 
 /*  Syntax quick reference
  *  ----------------------
- *  gutter[gut, g] = 1
- *  cf() - clearfix
+ *  gutter[g] = 1
  *  center(max_width = 1410px)
- *  column[col](ratios = 1, offset = false, g = gutter)
+ *  column[col](ratios = 1, offset = false)
  *  span(ratio = 1, offset = false)
- *  shift(ratios = 0, g = gutter)
+ *  shift(ratios = 0)
  *  unshift()
- *  getSpan(ratio)
- *  getColumn(ratios = 1, g = gutter, nested = false)
  *  bp(w = 705px, mobile_first = false[mf])
  *  endbp()
- *  stack(align = center[c, left, l, right, r])
+ *  stack(padding = 0, align = center[c, left, l, right, r])
  *  edit()
- *  pxfix()
+ *  cf() = clearfix
  */
 
-
-gutter = 2
+// Settings
+gutter = 3
 parent_first = false
 layout_direction = LTR
 
+// Mixins
 center(max_width = 1410px)
-    @extends $clearfix
-    @extends $centerbase
+    @extends $cf
     max-width max_width
+    float none
+    display block
+    margin-right auto
+    margin-left auto
 
-container(ratios = null, g = gutter)
-    @extends $containerbase
-    side = getLayoutDirection()
-    if ratios != null
-        margin = getGutter(ratios, g)
-        margin_inside = getColumn(1 ratios, g)[1]
-    else
-        margin = g
-        margin_inside = getColumn(1, g)[1]
-    margin-{side} (-(margin))%
-    &:before
-        {side} (margin_inside)%
-
-column(ratios = 1, offset = 0, g = gutter, cont = false)
-    // Gather Information
-    side = getLayoutDirection()
-    if cont is false
-        widths = getColumn(ratios, g)
-        width = widths[0]
-        margin = widths[1]
-    else
-        width = ratios[0] * 100
-        margin = 0
-    // Calculate Offset
+column(ratios = 1, offset = 0, cycle = 0, uncycle = 0)
+    side = get_layout_direction()
+    widths = get_column(ratios)
+    margin_l = margin_last = 0
+    margin_r = widths[1]
     unless offset == 0
+        edge = offset[1]
+        edge is true ? gutter_mult = 1 : gutter_mult = 2
+        offset = offset[0]
         if offset < 0
             offset *= -1
-            margin_opp = offset * 100
-            margin-{opposite-position(side)} (margin_opp)%
+            offset = get_column(offset, widths[1])[0]
+            margin_l = offset + widths[1] * gutter_mult
         else
-            offset = offset * 100
-            margin = offset + margin
-    // Mixin
-    @extends $clearfix
+            offset = get_column(offset, widths[1])[0]
+            margin_r = margin_last = offset + widths[1] * gutter_mult
+    @extends $cf
     float side
-    width (width)%
-    margin-{side} (margin)%
+    width (widths[0])%
+    margin-{side} (margin_l)%
+    margin-{opposite-position(side)} (margin_r)%
+    if uncycle != 0
+        &:nth-child({uncycle}n)
+            margin-{opposite-position(side)} (margin_r)%
+            float side
+    if cycle != 0
+        &:nth-child({cycle}n)
+            margin-{opposite-position(side)} (margin_last)%
+            float opposite-position(side)
+    else
+        &:last-child
+            margin-{opposite-position(side)} (margin_last)%
 
 span(ratio = 1, offset = 0)
-    // Gather Information
-    side = getLayoutDirection()
-    width = getSpan(ratio)
+    side = get_layout_direction()
+    width = get_span(ratio)
     margin_l = margin_r = 0
-    // Calculate Offset
     unless offset == 0
         if offset < 0
             offset *= -1
-            margin_r = getSpan(offset)
+            margin_l = get_span(offset)
         else
-            margin_l = getSpan(offset)
-    // Mixin
-    @extends $clearfix
+            margin_r = get_span(offset)
+    @extends $cf
     float side
     width (width)%
     margin-{side} (margin_l)%
     margin-{opposite-position(side)} (margin_r)%
 
-shift(ratios = 0, g = gutter, type = col)
-    // Get direction information
-    side = getLayoutDirection()
+shift(ratios = 0, col_or_span = column)
+    side = get_layout_direction()
     if side == right
-        ratios = replace-nth(ratios, 0, ratios[0] * -1)
-    if type == column or type == col or type == c
-        widths = getColumn(ratios, g)
+        ratios = replace_nth(ratios, 0, ratios[0] * -1)
+    if col_or_span == column or col_or_span == col or col_or_span == c
+        widths = get_column(ratios)
         translate = widths[0] + widths[1]
     else
-        translate = getSpan(ratios)
-    // Shift
+        translate = get_span(ratios)
     position relative
     left (translate)%
 
 unshift()
     position static
     left 0
-
-cycle(columns = 1)
-    side = getLayoutDirection()
-    &:nth-child({columns}n)
-        float opposite-position(side)
-
-uncycle(columns = 1)
-    side = getLayoutDirection()
-    &:nth-child({columns}n)
-        float side
-
-getColumn(ratios = 1, g = gutter)
-    // Returns the width and gutter for a column
-    ratios = reverse(ratios) unless parent_first is true
-    w = 100
-    for ratio in ratios
-        g = g / (w + g) * 100
-        w = 100 * ratio - g
-    return w g
-
-getGutter(ratios = 1, g = gutter)
-    // Returns the gutter for a container
-    ratios = reverse(ratios) unless parent_first is true
-    for ratio in ratios
-        w = 100 * ratio - g
-        g = g / (w + g) * 100
-    return g
-
-getSpan(ratio = 1)
-    // Returns the width of a span
-    return ratio * 100
-
-getLayoutDirection()
-    layout_direction == RTL ? result = right : result = left
-    return result
 
 bp(w = 705px, mobile_first = false)
     if (mobile_first == mf || mobile_first == true)
@@ -146,12 +102,20 @@ bp(w = 705px, mobile_first = false)
 endbp()
     unquote("}")
 
-stack(align = center)
+stack(padding = 0, align = center)
+    side = get_layout_direction()
     display block
+    float none
     width 100%
     margin-left auto
     margin-right auto
-    margin-bottom (g * 3)%
+    if padding != 0
+        padding-left padding
+        padding-right padding  
+    &:first-child
+        margin-{side} auto
+    &:last-child
+        margin-{opposite-position(side)} auto
     if (align == center) or (align == c)
         text-align center
     if (align == l) or (align == l)
@@ -164,27 +128,29 @@ edit()
         transition 200ms ease all
         background rgba(#000, .15)
 
-pxfix() // http://stackoverflow.com/a/12371926/1242079
-    float none
-    overflow hidden
-    width auto
+// Grid utilities
+get_span(ratio = 1)
+    return ratio * 100
 
-// List functions
-replace-nth(list, index, value)
+get_column(ratios = 1, g = gutter)
+    ratios = reverse(ratios) unless parent_first is true
+    w = 100
+    for ratio in ratios
+        g = g / w * 100
+        w = 100 * ratio - g + ratio * g
+    return w g
+
+get_layout_direction()
+    layout_direction == RTL ? result = right : result = left
+    return result
+
+replace_nth(list, index, value)
     result = ()
     index = length(list) + index if index < 0
     for i in (0..(length(list) - 1))
         if i == index
             append(result, value)
         else
-            append(result, list[i])
-    return result
-
-remove-nth(list, index)
-    result = ()
-    index = length(list) + index if index < 0  
-    for i in (0..(length(list) - 1))
-        if i != index 
             append(result, list[i])
     return result
 
@@ -196,37 +162,16 @@ reverse(list)
 
 // Function aliases
 g = gutter
-gut = gutter
 col = column
-off = offset
 cf = clearfix
 
-// Placeholder selectors
-$clearfix
+// Placeholders
+$cf
     cf()
 
-$centerbase
-    float none
-    display block
-    margin-right auto
-    margin-left auto
-    *margin-right auto
-    *margin-left auto
-
-$containerbase
-    display block
-    overflow hidden
-    position relative
-    &:before
-        content: ''
-        width: 100%
-        height: 100%
-        position: absolute
-        top: 0
-        z-index: -1
-
-
 // Config junk
+global-reset()
+base()
 *
     box-sizing(border-box)
     *behavior url(js/vendor/boxsizing.htc)
@@ -234,9 +179,25 @@ html
     overflow-y scroll
     overflow-x hidden
 body
-    @extends $clearfix
+    @extends $cf
     width 100%
 img, video, audio, embed, object, input, iframe
     max-width 100%
-.placeholder
-    color #aaa
+.cf
+    @extends $cf
+.chromeframe
+    width 100%
+    background #fff
+    background linear-gradient(top, #fff, #eee)
+    border-bottom 1px solid #ddd
+    box-shadow inset 0 -1px 0 #fff
+    text-shadow 0 1px 0 #fff
+    p
+        center()
+        padding 15px 0
+        margin-top 0
+        margin-bottom 0
+        text-align center
+        margin-bottom 0
+        a
+            color #3a95fb
