--- a/css/custom.styl
+++ b/css/custom.styl
@@ -1,7 +1,28 @@
 @import 'jeet'
 
+// edit()
 
+header
+    background #444 
+    > div
+        center(800px)
+        > a
+            padding-top 13px
+            padding-bottom 14px 
+    a
+        color #fff
+        text-decoration none
+        float left
+        display block
+        padding 16px 25px 14px
+.logo
+    fs(20px)
+    bold()
+    position relative
+    z-index 1
 
+.hamburger
+    hamburger(color: red, style: flat, t: 7px, r: 0, menu: white)
 
 // Mobile
 bp()
