Update edit() mixin to use .png for oldIE support

--- a/css/jeet.styl
+++ b/css/jeet.styl
@@ -131,7 +131,7 @@ stack(padding = 0, align = center)
 edit()
     *
         transition 200ms ease all
-        background rgba(#000, .15)
+        background url(../img/edit_mixin.png)
 
 align(direction = both) // IE10+
     if (direction == both) or (direction == b)
