Fix hamburger for various browsers

--- a/css/jeet.styl
+++ b/css/jeet.styl
@@ -219,10 +219,10 @@ hamburger(bg = #222, style = normal, align = right, top = 0, radius = 3px, menu 
         background none
         border none
         text-indent -9999px
-        height 34px
-        width 34px
         position relative
         cursor pointer
+        width 34px
+        height 34px
         if (align == left)
             float left
         else
@@ -243,9 +243,9 @@ hamburger(bg = #222, style = normal, align = right, top = 0, radius = 3px, menu 
                 background bg url(../img/menu_white.png) center no-repeat
             if (menu == black)
                 background bg url(../img/menu_black.png) center no-repeat
-            width 20px
-            height 20px
-            padding 7px
+            width 34px
+            height 34px
+            padding 0
     endbp()
 
 // Grid utilities
