Replace reset with minimal one. Add modular scale typography.styl

--- a/css/jeet.styl
+++ b/css/jeet.styl
@@ -1,4 +1,5 @@
 @import 'axis'
+@import 'typography'
 
 /*  Syntax quick reference
  *  ----------------------
@@ -300,11 +301,11 @@ $cf
     cf()
 
 // Resets and defaults
-global-reset()
-base()
 *
     box-sizing(border-box)
     *behavior url(js/vendor/boxsizing.htc)
+    margin 0
+    padding 0 
 html
     overflow-y scroll
     overflow-x hidden
