Update jeet.js with better relative->fixed scrolling. Needs refactored

--- a/css/jeet.styl
+++ b/css/jeet.styl
@@ -305,7 +305,7 @@ $cf
     box-sizing(border-box)
     *behavior url(js/vendor/boxsizing.htc)
     margin 0
-    padding 0 
+    padding 0
 html
     overflow-y scroll
     overflow-x hidden
@@ -316,6 +316,8 @@ img, video, audio, embed, object, input, iframe
     max-width 100%
 .cf
     @extends $cf
+[jeet-fixed]
+    transition all 200ms ease
 .chromeframe
     width 100%
     background #fff
