Update typography.styl and the fixed scroll js plugin

--- a/css/jeet.styl
+++ b/css/jeet.styl
@@ -131,7 +131,7 @@ stack(padding = 0, align = center)
 
 edit()
     *
-        transition 200ms ease all
+        // transition 200ms ease all
         background url(../img/edit_mixin.png)
 
 align(direction = both) // IE10+
@@ -316,8 +316,6 @@ img, video, audio, embed, object, input, iframe
     max-width 100%
 .cf
     @extends $cf
-[jeet-fixed]
-    transition all 200ms ease
 .chromeframe
     width 100%
     background #fff
