Remove important flags as they were interfering with mobile_first

--- a/css/jeet.styl
+++ b/css/jeet.styl
@@ -28,10 +28,10 @@ center(max_width = 1410px, padding = 15px)
     @extends $cf
     width auto
     max-width max_width
-    float none !important
+    float none
     display block
-    margin-right auto !important
-    margin-left auto !important
+    margin-right auto
+    margin-left auto
     padding-left padding 
     padding-right padding 
 
@@ -110,10 +110,10 @@ stack(padding = 0, align = center)
     side = get_layout_direction()
     display block
     clear both
-    float none !important
+    float none
     width 100%
-    margin-left auto !important
-    margin-right auto !important
+    margin-left auto
+    margin-right auto
     if padding != 0
         padding-left padding
         padding-right padding  
