Add Bower support; re-add watch command

--- a/css/jeet.styl
+++ b/css/jeet.styl
@@ -130,7 +130,7 @@ stack(padding = 0, align = center)
 
 edit()
     *
-        background url(../img/edit_mixin.png)
+        background rgba(#000, 5%) url(../img/edit_mixin.png)
 
 hamburger(bg = #222, style = normal, align = right, t = 0, l = 0, r = 0, menu = white, bp = 705px)
     @extend $cf
