Reset pseudo elems

--- a/css/jeet.styl
+++ b/css/jeet.styl
@@ -173,7 +173,7 @@ $cf
     cf()
 
 // Resets and defaults
-*
+*, *:before, *:after, *::before, *::after
     box-sizing(border-box)
     *behavior url(js/vendor/boxsizing.htc)
     margin 0
