Fix typography adjacent to sibling for header p

--- a/css/typography.styl
+++ b/css/typography.styl
@@ -71,26 +71,25 @@ li, dd
 pre
     fs(ms(8))
 header
-    *
-        + p
-            color #bbb
+    p
+        color #bbb
     h1
-        + p, + p + p, + p + p + p // Any more and you should move tagline stuff into own element
+        ~ p
             margin-top -(ms(5))
     h2
-        + p, + p + p, + p + p + p
+        ~ p
             margin-top -(ms(4))
     h3
-        + p, + p + p, + p + p + p
+        ~ p
             margin-top -(ms(3))
     h4
-        + p, + p + p, + p + p + p
+        ~ p
             margin-top -(ms(2))
     h5
-        + p, + p + p, + p + p + p
+        ~ p
             margin-top -(ms(1))
     h6
-        + p, + p + p, + p + p + p
+        ~ p
             margin-top -(ms(1))
 
 // Mobile
@@ -132,24 +131,24 @@ pre
     fs(ms(8))
 header
     *
-        + p
+        p
             color #bbb
     h1
-        + p, + p + p, + p + p + p // Any more and you should move tagline stuff into own element
+        ~ p
             margin-top -(ms(5))
     h2
-        + p, + p + p, + p + p + p
+        ~ p
             margin-top -(ms(4))
     h3
-        + p, + p + p, + p + p + p
+        ~ p
             margin-top -(ms(3))
     h4
-        + p, + p + p, + p + p + p
+        ~ p
             margin-top -(ms(2))
     h5
-        + p, + p + p, + p + p + p
+        ~ p
             margin-top -(ms(1))
     h6
-        + p, + p + p, + p + p + p
+        ~ p
             margin-top -(ms(1))
 endbp()
