--- a/css/typography.styl
+++ b/css/typography.styl
@@ -21,8 +21,15 @@ double_octave = 4
 typography_ratio = aug_fourth
 mobile_ratio = major_third
 
-ms(numbawang = 1, ratio = typography_ratio)
-    return (numbawang * ratio)px
+// Aliasing for convenience
+t = typography_ratio
+m = mobile_ratio
+
+ms(numbawang = 1, ratio = t)
+    if (ratio == mobile) or (ratio == m)
+        return (numbawang * m)px
+    else
+        return (numbawang * t)px
 
 // Default typography
 html
@@ -51,7 +58,7 @@ h3
     line-height ms(26)
     margin-bottom ms(6)
 h4
-    fs(ms(19))
+    fs(ms(20))
     line-height ms(24)
     margin-bottom ms(4)
 h5
@@ -94,61 +101,58 @@ header
 
 // Mobile
 bp()
-ms(numbawang = 1, ratio = mobile_ratio)
-    return (numbawang * ratio)px
 html
-    fs(ms(10))
-    line-height ms(15)
+    fs(ms(10, m))
+    line-height ms(15, m)
 h1
-    fs(ms(28))
-    line-height ms(30)
-    margin-bottom ms(10)
+    fs(ms(28, m))
+    line-height ms(30, m)
+    margin-bottom ms(10, m)
 h2
-    fs(ms(25))
-    line-height ms(28) 
-    margin-bottom ms(8)
+    fs(ms(25, m))
+    line-height ms(28, m) 
+    margin-bottom ms(8, m)
 h3
-    fs(ms(22))
-    line-height ms(26)
-    margin-bottom ms(6)
+    fs(ms(22, m))
+    line-height ms(26, m)
+    margin-bottom ms(6, m)
 h4
-    fs(ms(19))
-    line-height ms(24)
-    margin-bottom ms(4)
+    fs(ms(19, m))
+    line-height ms(24, m)
+    margin-bottom ms(4, m)
 h5
-    fs(ms(16))
-    line-height ms(22)
-    margin-bottom ms(2)
+    fs(ms(16, m))
+    line-height ms(22, m)
+    margin-bottom ms(2, m)
 h6
-    fs(ms(13))
-    line-height ms(20)
-    margin-bottom ms(0)
+    fs(ms(13, m))
+    line-height ms(20, m)
+    margin-bottom ms(0, m)
 p, ul, ol, pre, dl
-    margin-bottom ms(10)
+    margin-bottom ms(10, m)
 li, dd
-    margin-bottom ms(5)
+    margin-bottom ms(5, m)
 pre
-    fs(ms(8))
+    fs(ms(8, m))
 header
-    *
-        p
-            color #bbb
+    p
+        color #bbb
     h1
         ~ p
-            margin-top -(ms(5))
+            margin-top -(ms(5, m))
     h2
         ~ p
-            margin-top -(ms(4))
+            margin-top -(ms(4, m))
     h3
         ~ p
-            margin-top -(ms(3))
+            margin-top -(ms(3, m))
     h4
         ~ p
-            margin-top -(ms(2))
+            margin-top -(ms(2, m))
     h5
         ~ p
-            margin-top -(ms(1))
+            margin-top -(ms(1, m))
     h6
         ~ p
-            margin-top -(ms(1))
+            margin-top -(ms(1, m))
 endbp()
