Add layout.jade; update .chromeframe to .browsehappy

--- a/css/jeet/reset.styl
+++ b/css/jeet/reset.styl
@@ -14,7 +14,7 @@ img, video, audio, embed, object, input, iframe
     max-width 100%
 .cf
     @extends $cf
-.chromeframe
+.browsehappy
     width 100%
     background #fff
     border-bottom 1px solid #ddd
