--- a/jade/layout.jade
+++ b/jade/layout.jade
@@ -13,7 +13,7 @@ html.no-js
         meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
         title
         meta(name='viewport', content='width=device-width')
-        link(rel='stylesheet', href='css/custom.css')
+        link(rel='stylesheet', href='../css/custom.css')
         //if lt IE 9
             script(src='js/vendor/selectivizr-1.0.2.min.js')
         script(src='js/vendor/modernizr-2.6.2-respond-1.1.0.min.js')
