--- a/jade/layout.jade
+++ b/jade/layout.jade
@@ -1,3 +1,4 @@
+- var jeet_root = '../'
 !!! 5
 //if lt IE 7
     <html class="no-js lt-ie9 lt-ie8 lt-ie7">
@@ -13,14 +14,14 @@ html.no-js
         meta(http-equiv='X-UA-Compatible', content='IE=edge,chrome=1')
         title
         meta(name='viewport', content='width=device-width')
-        link(rel='stylesheet', href='../css/custom.css')
+        link(rel='stylesheet', href='#{jeet_root}css/custom.css')
         //if lt IE 9
-            script(src='js/vendor/selectivizr-1.0.2.min.js')
-        script(src='js/vendor/modernizr-2.6.2-respond-1.1.0.min.js')
+            script(src='#{jeet_root}js/vendor/selectivizr-1.0.2.min.js')
+        script(src='#{jeet_root}js/vendor/modernizr-2.6.2-respond-1.1.0.min.js')
     body
         
         
-        
+        h1 Hi there
         
         
         //if lt IE 9
@@ -36,10 +37,10 @@ html.no-js
         //if lt IE 9
             script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
             script.
-                window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')
+                window.jQuery || document.write('<script src="#{jeet_root}js/vendor/jquery-1.10.2.min.js"><\/script>')
         // [if gt IE 8] <!
         script(src='http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js')
         script.
-            window.jQuery || document.write('<script src="js/vendor/jquery-2.0.3.min.js"><\/script>')
+            window.jQuery || document.write('<script src="#{jeet_root}js/vendor/jquery-2.0.3.min.js"><\/script>')
         // <![endif]
-        script(src='js/minified.js')
+        script(src='#{jeet_root}js/minified.js')
