--- a/css/jeet/typography.styl
+++ b/css/jeet/typography.styl
@@ -204,7 +204,7 @@ pre
     line-height 160%
 
 // Mobile
-bp(mobile_breakpoint)
+bp(mobile_breakpoint, mf: false)
 html
     font-size ms(10, m)
     line-height ms(15, m)
