--- a/css/jeet/grid.styl
+++ b/css/jeet/grid.styl
@@ -1,8 +1,3 @@
-// Grid Settings
-gutter = 3
-parent_first = false
-layout_direction = LTR
-
 // Columns with Gutters
 column(ratios = 1, offset = 0, cycle = 0, uncycle = 0)
     side = get_layout_direction()
@@ -31,10 +26,14 @@ column(ratios = 1, offset = 0, cycle = 0, uncycle = 0)
         &:nth-child({uncycle}n)
             margin-{opposite-position(side)} (margin_r)%
             float side
+        &:nth-child({uncycle+1}n)
+            clear none
     if cycle != 0
         &:nth-child({cycle}n)
             margin-{opposite-position(side)} (margin_last)%
             float opposite-position(side)
+        &:nth-child({cycle+1}n)
+            clear both
     else
         &:last-child
             margin-{opposite-position(side)} (margin_last)%
