Invalid property value 'color'
Font color for code text was just listed as "color: color" which I assume was supposed to be body_color (or maybe header_color?).

--- a/css/jeet/typography.styl
+++ b/css/jeet/typography.styl
@@ -178,7 +178,7 @@ header
             margin-top -(ms(1))
 code
     padding 3px 4px
-    color color
+    color body_color
     background-color #F5F5F5
     border 1px solid #E1E1E8
     border-radius 3px
