--- a/css/jeet/reset.styl
+++ b/css/jeet/reset.styl
@@ -146,16 +146,16 @@ img, video, audio, embed, object, input, iframe
     @extend $cf
 .browsehappy
     width 100%
+    padding 15px 0
     background #fff
     border-bottom 1px solid #ddd
-    box-shadow inset 0 -1px 0 #fff
-    text-shadow 0 1px 0 #fff
-    p
+    //box-shadow inset 0 -1px 0 #fff
+    //text-shadow 0 1px 0 #fff
+    p, span
         center()
-        padding 15px 0
         margin-top 0
         margin-bottom 0
         text-align center
         margin-bottom 0
-        a
-            color blue
+    a
+        color blue
