Added font size for .browsehappy <span>, fixed <strong> & <b> styling
-Made font size of the <span> in .browsehappy slightly smaller than the paragraph.
-Removed 'strong' and 'b' from line 74 so they would bold properly instead of inheriting the font weight from header_weight.

--- a/css/jeet/typography.styl
+++ b/css/jeet/typography.styl
@@ -71,7 +71,7 @@ a
         color darken(blue, 10%)
 h1
     margin-top 0
-h1, h2, h3, h4, h5, h6, strong, b, dt
+h1, h2, h3, h4, h5, h6, dt
     font-family headers
     font-weight header_weight
     color header_color
@@ -193,7 +193,10 @@ pre
     word-break break-all
     font-family Menlo, Monaco, monospace
     line-height 160%
-
+.browsehappy
+    span
+        font-size ms(8)
+        
 // Secondary Typography
 bp(breakpoint)
 html
